Meilleur affichage du range de date pour les événements

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,3 +6,8 @@ fr:
       carrierwave_download_error: "Couldn't download image."
       extension_white_list_error: "Vous ne pouvez pas téléverser des fichiers %{extension}. Les extensions autorisées sont: %{allowed_types}"
       extension_black_list_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
+
+  date:
+    formats:
+      no_year: "%e %B"
+      just_month: "%B"
