--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,5 @@
 fr:
+  org_name: Alliance pour une constituante citoyenne du Québec
   errors:
     messages:
       carrierwave_processing_error: "Cannot resize image."
